landing page text alignment fixed. bulba image url in the pokeinfo table are now relative paths, rather than absolute paths to the heroku apps hosting of the images

--- a/static/landing.css
+++ b/static/landing.css
@@ -53,18 +53,20 @@ a {
 }
 
 a:visited {
-    text-decoration: none; 
-    color: #2B2121; 
+    text-decoration: none;
+    color: #2B2121;
 }
 
 img {
     margin-top: 20px;
     max-width: 20%;
     margin-top: 200px;
-    margin-left: 230px;;
+    margin-left: 230px;
+    ;
 }
 
 #footer {
     margin-top: 350px;
-    margin-left: -525px;
+    margin-left: -560px;
+    font-size: x-small;
 }
